feat: Initialize analyzer & documentation
